# DJ-Shell

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.qml
qml/: main.qml
qml/widgets/: Battery.qml  Clock.qml  Workspace.qml
src/: main.cpp
